--- a/design/src/main/res/layout/component_large_action_label.xml
+++ b/design/src/main/res/layout/component_large_action_label.xml
@@ -6,32 +6,37 @@
         android:layout_gravity="center_vertical"
         android:gravity="center_vertical"
         android:orientation="horizontal"
-        android:paddingVertical="@dimen/large_item_padding_vertical">
+        android:paddingVertical="18dp">
 
         <View
             android:id="@+id/icon_view"
-            android:layout_width="@dimen/large_item_header_component_size"
-            android:layout_height="@dimen/large_item_header_component_size"
-            android:layout_marginHorizontal="@dimen/large_item_header_margin_horizontal" />
+            android:layout_width="28dp"
+            android:layout_height="28dp"
+            android:layout_marginHorizontal="24dp"
+            android:alpha="0.9" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/large_item_tailing_margin_horizontal"
+            android:layout_marginEnd="24dp"
             android:orientation="vertical">
 
             <TextView
                 android:id="@+id/text_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
+                android:textStyle="bold"
+                android:letterSpacing="0.02" />
 
             <TextView
                 android:id="@+id/subtext_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/large_item_text_margin"
-                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />
+                android:layout_marginTop="4dp"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
+                android:alpha="0.7"
+                android:letterSpacing="0.01" />
         </LinearLayout>
     </LinearLayout>
 </layout>
