--- a/design/src/main/res/values/themes.xml
+++ b/design/src/main/res/values/themes.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <style name="AppBottomSheetStyle" parent="Widget.Design.BottomSheet.Modal">
         <item name="android:background">@drawable/bg_bottom_sheet</item>
     </style>
@@ -15,7 +15,7 @@
 
         <item name="colorPrimary">@color/color_clash_light</item>
         <item name="colorOnPrimary">@android:color/white</item>
-        <item name="colorControlNormal">@android:color/black</item>
+        <item name="colorControlNormal">@color/color_text_primary_light</item>
         <item name="colorClashStopped">@color/color_light_clash_stopped</item>
         <item name="colorControlDisabled">@color/color_light_control_disabled</item>
 
@@ -39,6 +39,7 @@
         <item name="colorPrimary">@color/color_clash_dark</item>
         <item name="colorOnPrimary">@android:color/white</item>
         <item name="colorSurface">@color/color_dark_surface</item>
+        <item name="colorControlNormal">@color/color_text_primary_dark</item>
         <item name="colorControlDisabled">@color/color_dark_control_disabled</item>
         <item name="android:windowBackground">@color/color_dark_background</item>
 
@@ -52,7 +53,9 @@
 
     <style name="AppFullScreenDialogLight" parent="AppFullScreenDialogLightBase">
         <item name="android:statusBarColor">@android:color/transparent</item>
-        <item name="android:navigationBarColor">@color/color_system_ui_overlay</item>
+        <item name="android:navigationBarColor">@android:color/transparent</item>
+        <item name="android:windowLightStatusBar" tools:targetApi="m">true</item>
+        <item name="android:windowLightNavigationBar" tools:targetApi="o_mr1">true</item>
     </style>
 
     <style name="AppFullScreenDialogDark" parent="AppFullScreenDialogDarkBase">
@@ -68,7 +71,7 @@
 
         <item name="colorPrimary">@color/color_clash_light</item>
         <item name="colorOnPrimary">@android:color/white</item>
-        <item name="colorControlNormal">@android:color/black</item>
+        <item name="colorControlNormal">@color/color_text_primary_light</item>
         <item name="colorClashStopped">@color/color_light_clash_stopped</item>
         <item name="colorControlDisabled">@color/color_light_control_disabled</item>
 
@@ -90,6 +93,7 @@
         <item name="colorPrimary">@color/color_clash_dark</item>
         <item name="colorOnPrimary">@android:color/white</item>
         <item name="colorSurface">@color/color_dark_surface</item>
+        <item name="colorControlNormal">@color/color_text_primary_dark</item>
         <item name="colorControlDisabled">@color/color_dark_control_disabled</item>
 
         <item name="colorPrimaryDark">?attr/colorPrimary</item>
@@ -104,7 +108,9 @@
 
     <style name="AppBottomSheetDialogLight" parent="AppBottomSheetDialogLightBase">
         <item name="android:statusBarColor">@android:color/transparent</item>
-        <item name="android:navigationBarColor">@color/color_system_ui_overlay</item>
+        <item name="android:navigationBarColor">@android:color/transparent</item>
+        <item name="android:windowLightStatusBar" tools:targetApi="m">true</item>
+        <item name="android:windowLightNavigationBar" tools:targetApi="o_mr1">true</item>
     </style>
 
     <style name="AppBottomSheetDialogDark" parent="AppBottomSheetDialogDarkBase">
@@ -114,12 +120,12 @@
 
     <style name="AppThemeLightBase" parent="Theme.MaterialComponents.Light.NoActionBar">
         <item name="android:windowBackground">@color/color_light_background</item>
-        <item name="android:ambientShadowAlpha">0.08</item>
-        <item name="android:spotShadowAlpha">0.08</item>
+        <item name="android:ambientShadowAlpha">0.02</item>
+        <item name="android:spotShadowAlpha">0.02</item>
 
         <item name="colorPrimary">@color/color_clash_light</item>
         <item name="colorOnPrimary">@android:color/white</item>
-        <item name="colorControlNormal">@android:color/black</item>
+        <item name="colorControlNormal">@color/color_text_primary_light</item>
         <item name="colorClashStopped">@color/color_light_clash_stopped</item>
         <item name="colorControlDisabled">@color/color_light_control_disabled</item>
 
@@ -136,13 +142,13 @@
 
     <style name="AppThemeDarkBase" parent="Theme.MaterialComponents.NoActionBar">
         <item name="android:windowBackground">@color/color_dark_background</item>
-        <item name="android:ambientShadowAlpha">0.08</item>
-        <item name="android:spotShadowAlpha">0.08</item>
+        <item name="android:ambientShadowAlpha">0.02</item>
+        <item name="android:spotShadowAlpha">0.02</item>
 
         <item name="colorPrimary">@color/color_clash_dark</item>
         <item name="colorOnPrimary">@android:color/white</item>
         <item name="colorSurface">@color/color_dark_surface</item>
-        <item name="colorControlNormal">@android:color/white</item>
+        <item name="colorControlNormal">@color/color_text_primary_dark</item>
         <item name="colorControlDisabled">@color/color_dark_control_disabled</item>
 
         <item name="colorPrimaryDark">?attr/colorPrimary</item>
@@ -158,8 +164,10 @@
     </style>
 
     <style name="AppThemeLight" parent="AppThemeLightBase">
-        <item name="android:statusBarColor">@color/color_system_ui_overlay</item>
-        <item name="android:navigationBarColor">@color/color_system_ui_overlay</item>
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:navigationBarColor">@android:color/transparent</item>
+        <item name="android:windowLightStatusBar" tools:targetApi="m">true</item>
+        <item name="android:windowLightNavigationBar" tools:targetApi="o_mr1">true</item>
     </style>
 
     <style name="AppThemeDark" parent="AppThemeDarkBase">
